Add text-file config patch support
Implements modern SLS `parser: file` line-prefix replacements. Adds TextFileConfigEditor (atomic sibling-temp writes, UTF-8 only, 8 MiB limit, LF normalization, no symlink/traversal, missing targets created empty, failures preserve originals) and integrates textFileConfigs into Blueprint, repo parsing/validation (non-empty single-line prefixes; values: string/number/boolean), instance fingerprinting, and application during instance preparation. Includes unit tests for parsing and editor behavior and updates docs/testing/compatibility to describe the feature.